--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="title"><span>About Me</span></div>
       <div class="about-details">
         <div class="left">
-          <img src="./images/CodeParth.jpg" alt="">
+          <img src="./Images/CodeParth.jpg" alt="">
         </div>
         <div class="right">
           <div class="topic">Designing Is My Passion</div>
