--- a/index.html
+++ b/index.html
@@ -135,14 +135,14 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem
             eligendi?</p>
         </div>
-        <div class="box">
+<!--         <div class="box">
           <div class="icon">
             <i class="fas fa-chart-line"></i>
           </div>
           <div class="topic">Digital Marketing</div>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem
             eligendi?</p>
-        </div>
+        </div> -->
         <div class="box">
           <div class="icon">
             <i class="fab fa-android"></i>
@@ -151,14 +151,14 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem
             eligendi?</p>
         </div>
-        <div class="box">
+<!--         <div class="box">
           <div class="icon">
             <i class="fas fa-camera-retro"></i>
           </div>
           <div class="topic">Photography</div>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem
             eligendi?</p>
-        </div>
+        </div> -->
         <div class="box">
           <div class="icon">
             <i class="fas fa-tablet-alt"></i>
@@ -171,7 +171,6 @@
     </div>
   </section>
 
-  <!-- Contact Me section Start -->
   <section class="contact" id="contact">
     <div class="content">
       <div class="title"><span>Contact Me</span></div>
