--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
             error vitae, omnis praesentium? Aperiam nulla non, nesciunt fuga rem perferendis alias et, temporibus,
             distinctio culpa unde a laborum libero ducimus. Facilis veniam sit praesentium, voluptatibus sint maxime
             iusto eaque.</p>
-          <div class="button">
+          <!-- <div class="button">
             <button><span>Download CV</span></button>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
@@ -77,9 +77,9 @@
       <div class="skills-details">
         <div class="text">
           <div class="topic">Skills Reflects Our Knowledge</div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus natus tenetur tempora? Quasi, rem quas
+          <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus natus tenetur tempora? Quasi, rem quas
             omnis. Porro rem aspernatur reiciendis ut praesentium minima ad, quos, officia! Illo libero, et, distinctio
-            repellat sed nesciunt est modi quaerat placeat. Quod molestiae, alias?</p>
+            repellat sed nesciunt est modi quaerat placeat. Quod molestiae, alias?</p> -->
           <div class="experience">
             <div class="num">3</div>
             <div class="exp">Years Of <br> Experience</div>
@@ -124,24 +124,24 @@
             <i class="fas fa-desktop"></i>
           </div>
           <div class="topic">Web Devlopment</div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem
-            eligendi?</p>
+          <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem
+            eligendi?</p> -->
         </div>
         <div class="box">
           <div class="icon">
             <i class="fas fa-paint-brush"></i>
           </div>
           <div class="topic">Graphic Design</div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem
-            eligendi?</p>
+          <!--;<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem
+            eligendi?</p> -->
         </div>
         <div class="box">
           <div class="icon">
             <i class="fas fa-tablet-alt"></i>
           </div>
           <div class="topic">Apps Devlopment</div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem
-            eligendi?</p>
+          <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem
+            eligendi?</p> -->
         </div>
       </div>
     </div>
