--- a/index.html
+++ b/index.html
@@ -55,14 +55,7 @@
         </div>
         <div class="right">
           <div class="topic">Designing Is My Passion</div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, porro veritatis pariatur, nobis
-            voluptatem ipsum repellat nemo quisquam error reprehenderit recusandae odio vel, suscipit. Voluptas mollitia
-            accusantium quaerat aspernatur labore dolorum placeat ipsa sint nam perspiciatis eos consectetur veritatis
-            debitis, quis aliquam unde sed maiores sit! Hic molestiae optio iste iure earum amet nostrum quaerat facere
-            quae veniam maiores harum iusto aperiam vel inventore illo voluptatibus voluptates quo impedit voluptatum
-            error vitae, omnis praesentium? Aperiam nulla non, nesciunt fuga rem perferendis alias et, temporibus,
-            distinctio culpa unde a laborum libero ducimus. Facilis veniam sit praesentium, voluptatibus sint maxime
-            iusto eaque.</p>
+          <p>I'm extremely passionate about desktop development, that's what I wanna work on in the future. Ive done several minor projects and a few major projects, to name a few: a tic-tac-toe game, a determinant- matrices calculator, I've also made a GPS map for my university, and a many more. I have a great amount of knowledge in computer hardware knowledge. I have also got several offers from Microsoft USA, and I am looking forward work there in the future! LIVE LONG CODERS!!</p>
           <!-- <div class="button">
             <button><span>Download CV</span></button>
           </div> -->
